Release 1.0.7 (future)

- Issue 220: Unknown properties when deserializing repeated structured prop.
- Issue 188: Add an option to set a separate deadline for memcache calls.
- Issue 217: Explicitly disallow deleting ComputedProperty.
- Issue 213: PolyModel root class query should not filter on 'class'.

Release 1.0.6 (included in SDK 1.7.3)

- Issue 207: Convert dicts into structured properties automatically.
- Issue 209: Save/restore datastore connection around tasklet switches.
- Issue 210: Fix fetch() with offset > 1000.
- Improve error message when calling Model() with positional argument(s).

Release 1.0.5 (included in SDK 1.7.2)

- Issue 204: Improve message for tasklet plain value error.
- Issue 199: Fix GQL for PolyModel.
- Issue 200: gql() should raise KindError for unknown kind.

----------------------------------------

Release 1.0.4 (included in SDK 1.7.1)

- Issue 196: AutoBatcher should pass errors through Futures properly.
- Issue 193: Don't try to put entities > 1000000 in memcache.
- Issue 192: Override repr() to avoid huge representations.
- Issues 189, 194: Reject projecting on unindexed or undefined properties.
- Issue 190: Tasklets should preserve the default namespace when spawned.

----------------------------------------

Release 1.0.3 (included in SDK 1.7.0)

Major new features:
- Projection queries (issue 181).
- Support serializing ProtoRPC messages using ndb/msgprop.py (issue 185).
- Context.call_on_commit() registers commit callbacks (issue 174).

Also:
- Issue 186: Added an error for indirectly nested repeat in StructuredProperty.
- Keys for Context.memcache_*() calls can now be unicode.
- Issue 182: Add optional app and namespace args to get_by_id*().

----------------------------------------

Release 1.0.2 (included in SDK 1.6.6)

- Use a unique 'meaning' for LocalStructuredProperty.
- Issue 183: Fix mixin issue with polymodel.
- Issue 179: Rollback is a flow exception.
- Streamline the threaded test server creation.