@@ -1680,7 +1680,18 @@ class PickleProperty(BlobProperty):
 class JsonProperty(BlobProperty):
   """A property whose value is any Json-encodable Python object."""
 
+  _json_type = None
+
+  @utils.positional(BlobProperty._positional)
+  def __init__(self, name=None, compressed=False, json_type=None, **kwds):
+    super(JsonProperty, self).__init__(name=name, compressed=compressed, **kwds)
+    self._json_type = json_type
+
   # Use late import so the dependency is optional.
+
+  def _validate(self, value):
+    if self._json_type is not None and not isinstance(value, self._json_type):
+      raise TypeError('JSON property must be a %s' % self._json_type)
 
   def _to_base_type(self, value):
     try:
