@@ -1,5 +1,6 @@
 Release 1.0.7 (future)
 
+- Issue 223: JsonProperty(json_type=dict) restricts the JSON value to a dict.
 - Issue 220: Unknown properties when deserializing repeated structured prop.
 - Issue 188: Add an option to set a separate deadline for memcache calls.
 - Issue 217: Explicitly disallow deleting ComputedProperty.
